# adv_mla_lab4

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
models/: ohe_encoder.joblib  ord_age_encoder.joblib  ord_checkup_encoder.joblib  ord_health_encoder.joblib  sgd_clf_default.joblib
notebooks/: 1_baseline.ipynb  2_tf_callbacks.ipynb
